k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flexsim
  labels:
    app.kubernetes.io/name: flexsim
    environment: dev
