k8s/experiment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: experiment-service
  namespace: flexsim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: experiment-service
  template:
    metadata:
      labels:
        app: experiment-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: experiment-service
          image: ghcr.io/neelamrawatt/experiment-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "250m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 18

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: experiment-service
  namespace: flexsim
spec:
  selector:
    app: experiment-service
  ports:
    - port: 8082
      targetPort: 8082
